Adding a linear layout in addition to the centered layout.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="/css/reset.css" media="screen" />
     <link rel="stylesheet" href="/css/main.css" media="screen" />    
   </head>
-  <body>
+  <body class="linear">
     <h1>SHS Cruise Control</h1>
+    
+    <ul class="nav">
+      <li>Layout:</li>
+      <li><a href="#centered" class="selected">Centered</a></li>
+      <li><a href="#linear">Linear</a></li>
+    </ul>
     
     <ul id="building" class="projects"></ul>
     <ul id="failing" class="projects"></ul>
